My_Python_Notebook：多进程-进程池

--- a/My_Python_Notebook/10进程和线程.md
+++ b/My_Python_Notebook/10进程和线程.md
@@ -127,3 +127,64 @@ Process end.
 `join()` 方法可以**等待子进程结束后再继续往下运行**，通常用于进程间的同步。
 
 ---
+
+### 进程池
+
+如果要启动大量的子进程，我们可以用**进程池**的方式来**批量创建子进程**：
+
+```python
+from multiprocessing import Pool
+import os, time, random
+
+# 子进程执行的任务
+def long_time_task(name):
+    print('Run task %s (%s)...' % (name, os.getpid()))
+    start = time.time()
+    time.sleep(random.random() * 3)
+    end = time.time()
+    print('Task %s runs %0.2f seconds.' % (name, (end - start)))
+
+if __name__=='__main__':
+    print('Parent process %s.' % os.getpid())
+    p = Pool(4) # 创建一个大小为4的进程池
+    for i in range(5): # 依次创建5个子进程
+        p.apply_async(long_time_task, args=(i,))
+    print('Waiting for all subprocesses done...')
+    p.close()
+    p.join()
+    print('All subprocesses done.')
+```
+
+执行结果如下：
+
+```python
+Parent process 669.
+Waiting for all subprocesses done...
+Run task 0 (671)...
+Run task 1 (672)...
+Run task 2 (673)...
+Run task 3 (674)...
+Task 2 runs 0.14 seconds.
+Run task 4 (673)...
+Task 1 runs 0.27 seconds.
+Task 3 runs 0.86 seconds.
+Task 0 runs 1.41 seconds.
+Task 4 runs 1.91 seconds.
+All subprocesses done.
+```
+
+代码解读：
+
+对 `Pool` 对象调用 `join()` 方法会等待所有子进程执行完毕，**调用 `join()` 之前必须先调用 `close()`，调用 `close()` 之后就不能往进程池中继续添加新的 `Process` 了**。
+
+请注意输出的结果，task 0，1，2，3这四个子进程是立刻执行的，而task 4要等待前面某个task完成后才执行，这是因为我们定义进程池时定义了大小为4，也即最多同时执行4个进程，所以第5个进程就要等进程池里有空位了才能开始。如果改成：
+
+```python
+p = Pool(5)
+```
+
+就可以同时跑5个进程。
+
+当没有传入参数时，**Pool的默认大小是CPU的核数**，所以如果电脑是4核CPU则默认进程池大小为4，如果电脑是8核CPU则默认进程池大小为8。
+
+---
