My_Python_Notebook：多进程-子进程的输入和输出

--- a/My_Python_Notebook/10进程和线程.md
+++ b/My_Python_Notebook/10进程和线程.md
@@ -188,3 +188,80 @@ p = Pool(5)
 当没有传入参数时，**Pool的默认大小是CPU的核数**，所以如果电脑是4核CPU则默认进程池大小为4，如果电脑是8核CPU则默认进程池大小为8。
 
 ---
+
+### 子进程的输入和输出
+
+很多时候，子进程和父进程要执行的不是同一个任务。我们创建了子进程后，还需要控制子进程的输入和输出。
+
+`subprocess` 模块可以让我们非常方便地启动一个子进程，并且控制其输入和输出。
+
+下面的例子演示了如何在Python代码中运行命令 `nslookup www.python.org`，这和命令行直接运行的效果是一样的：
+
+```python
+import subprocess
+
+print('$ nslookup www.python.org')
+r = subprocess.call(['nslookup', 'www.python.org'])
+print('Exit code:', r)
+```
+
+运行结果：
+
+```python
+$ nslookup www.python.org
+Server:        192.168.19.4
+Address:    192.168.19.4#53
+
+Non-authoritative answer:
+www.python.org    canonical name = python.map.fastly.net.
+Name:    python.map.fastly.net
+Address: 199.27.79.223
+
+Exit code: 0
+```
+
+看看帮助文档中 `subprocess` 模块的 `call()` 函数的描述：
+
+> Run command with arguments.  Wait for command to complete or timeout, then return the returncode attribute.
+
+它可以帮助我们建立一个子进程来执行系统调用函数，并且允许传入函数，调用后会等待运行结束并最终返回调用函数的返回值，之后才继续执行后续代码。可以只传入一个列表，列表第一个元素为系统调用的名称，第二个元素为参数。
+
+如果子进程**执行的过程中**还需要其他输入，我们使用 `subprocess` 模块的 `Popen` 类初始化子进程，并通过它的 `communicate()` 方法来实现进程执行过程中的多次输入：
+
+```python
+import subprocess
+
+print('$ nslookup')
+p = subprocess.Popen(['nslookup'], stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.PIPE)
+output, err = p.communicate(b'set q=mx\npython.org\nexit\n') # 每次输入之间用换行符隔开
+print(output.decode('utf-8')) # 返回的是字节流，所以要先解码
+print('Exit code:', p.returncode)
+```
+
+上面的代码相当于在命令行执行命令 `nslookup`，然后手动输入：
+
+```python
+set q=mx
+python.org
+exit
+```
+
+运行结果如下：
+
+```python
+$ nslookup
+Server:        192.168.19.4
+Address:    192.168.19.4#53
+
+Non-authoritative answer:
+python.org    mail exchanger = 50 mail.python.org.
+
+Authoritative answers can be found from:
+mail.python.org    internet address = 82.94.164.166
+mail.python.org    has AAAA address 2001:888:2000:d::a6
+
+
+Exit code: 0
+```
+
+---
