My_Python_Notebook：多进程-小结

--- a/My_Python_Notebook/10进程和线程.md
+++ b/My_Python_Notebook/10进程和线程.md
@@ -320,3 +320,14 @@ Get C from queue.
 ```
 
 在Unix/Linux下，`multiprocessing` 模块封装了 `fork()` 调用，使我们不需要关注 `fork()` 的细节。由于Windows没有fork调用，因此，`multiprocessing` 需要“模拟”出fork的效果，**父进程的所有Python对象都必须先通过 `pickle` 序列化再传到子进程去**。所以，如果 `multiprocessing` 在Windows下调用失败了，就要先考虑是不是序列化失败了。
+
+---
+
+### 小结
+
+在Unix/Linux下，可以使用 `fork()` 调用实现多进程。
+
+要实现跨平台的多进程，可以使用 `multiprocessing` 模块。
+
+进程间通信可以通过 `Queue`、`Pipes` 等实现的。
+
