My_Python_Notebook：多线程-多线程简单实现

--- a/My_Python_Notebook/10进程和线程.md
+++ b/My_Python_Notebook/10进程和线程.md
@@ -331,3 +331,59 @@ Get C from queue.
 
 进程间通信可以通过 `Queue`、`Pipes` 等实现的。
 
+---
+
+<br>
+
+## 多线程
+
+### 多线程简单实现
+
+多任务可以由多进程完成，也可以由一个进程内的多线程完成。
+
+我们前面提到了进程是由若干线程组成的，一个进程至少有一个线程。
+
+由于线程是操作系统直接支持的执行单元，因此，高级语言通常都内置多线程的支持，Python也不例外，并且，Python的线程是真正的Posix Thread，而不是模拟出来的线程。
+
+Python的标准库提供了两个模块：`_thread` 和 `threading`，`_thread` 是低级模块，threading是高级模块，对 `_thread` 进行了封装。绝大多数情况下，我们只需要使用 `threading` 这个高级模块。
+
+使用 `threading` 时，我们可以创建 `Thread` 实例来建立新的线程，然后调用 `start()` 启动该线程：
+
+```python
+import time, threading
+
+# 新线程执行的代码:
+def loop():
+    print('thread %s is running...' % threading.current_thread().name)
+    n = 0
+    while n < 5:
+        n = n + 1
+        print('thread %s >>> %s' % (threading.current_thread().name, n))
+        time.sleep(1)
+    print('thread %s ended.' % threading.current_thread().name)
+
+print('thread %s is running...' % threading.current_thread().name)
+t = threading.Thread(target=loop, name='LoopThread')
+t.start()
+t.join()
+print('thread %s ended.' % threading.current_thread().name)
+```
+
+执行结果如下：
+
+```python
+thread MainThread is running...
+thread LoopThread is running...
+thread LoopThread >>> 1
+thread LoopThread >>> 2
+thread LoopThread >>> 3
+thread LoopThread >>> 4
+thread LoopThread >>> 5
+thread LoopThread ended.
+thread MainThread ended.
+```
+
+由于任何进程默认就会启动一个线程，我们把该线程称为主线程，主线程又可以启动新的线程，Python的 `threading` 模块有个 `current_thread()` 函数，它永远返回当前线程的实例。**主线程实例的名字叫 `MainThread`，子线程的名字在创建时指定**，我们用 `LoopThread` 命名子线程。名字仅仅在打印时用来显示，没有其他意义，如果不起名字Python就会自动给线程命名为 `Thread-1`，`Thread-2`……
+
+---
+
