My_Python_Notebook：多线程-线程锁

--- a/My_Python_Notebook/10进程和线程.md
+++ b/My_Python_Notebook/10进程和线程.md
@@ -387,3 +387,142 @@ thread MainThread ended.
 
 ---
 
+### 线程锁
+
+多线程和多进程最大的不同在于，多进程中，同一个变量，各自有一份拷贝存在于每个进程中，互不影响。而**多线程中，所有变量都由所有线程共享**，所以，任何一个变量都可以被任何一个线程修改，因此，线程之间共享数据最大的危险在于多个线程**同时改一个变量**，把内容给改乱了。
+
+来看看多个线程同时操作一个变量怎么把内容给改乱了：
+
+```python
+import time, threading
+
+# 假定这是你的银行存款:
+balance = 0
+
+def change_it(n):
+    # 先加后减，结果应该为0:
+    global balance
+    balance = balance + n
+    balance = balance - n
+
+def run_thread(n):
+    for i in range(100000):
+        change_it(n)
+
+t1 = threading.Thread(target=run_thread, args=(5,))
+t2 = threading.Thread(target=run_thread, args=(8,))
+t1.start()
+t2.start()
+t1.join()
+t2.join()
+print(balance)
+```
+
+注意，`change_it()` 函数中，使用了global关键字来声明使用的 `balance` 变量是在函数定义外部的，这样在函数内部的修改也会反映到函数外部。
+
+`balance`，初始值为0，并且启动两个线程，先加后减，理论上结果应该为0，但是，由于线程的调度是由操作系统决定的，当t1、t2交替执行时，只要循环次数足够多，在某个时刻，线程t1和t2同时对 `balance` 变量进行修改，那么最终结果就不一定是0了。比方说：
+
+| 时间 | 线程 | balance | 操作 |
+|:-:|:-:|:-:|:-:|
+| 00 | t1 | 0 | +5 |
+| 01 | t1 | 5 | -5 |
+| 02 | t2 | 0 | +8 |
+| 03 | t2 | 8 | -8 |
+| 04 | t1 | 0 | +5 |
+| 05 | t2 | 5 | +8 |
+| 06 | t1 | 13 | -8 |
+| 07 | t2 | 5 | -5 |
+| 08 | t1,t2 | 0 | +5,+8 |
+| 09 | t1 | 8 | -5 |
+| 10 | t2 | 3 | -8 |
+| 11 | t1 | -5 | +5 |
+| 12 | t2 | 0 | +8 |
+| 13 | t1 | 8 | -5 |
+| 14 | t2 | 3 | -8 |
+
+假设在08时刻，t1和t2同时执行 `balance = balance + n` 这个语句，右边的 `balance` 都取0，那么t1执行完该语句时 `balance` 为5，而t2执行完时 `balance` 为8，假设t2后执行完毕，那么 `balance` 就取8，这时就产生错误了，并且错误会继续累积，当循环次数达到一定规模时，这种错误的累积会非常可怕。
+
+为什么会产生这样的错误呢？其实 呀，这时因为高级语言的一条语句在CPU执行时需要转换为多条汇编指令，即使一个简单的计算：
+
+```python
+balance = balance + n
+```
+
+也需要分为两步：
+
+1. 计算 `balance + n`，存入临时变量中；
+2. 将临时变量的值赋给 `balance`。
+
+可以看成：
+
+```python
+x = balance + n
+balance = x
+```
+
+临时变量 `x` 是一个**局部变量**，两个线程各自都有自己的 `x`，所以当代码正常执行时：
+
+初始值 `balance = 0`
+
+```python
+t1: x1 = balance + 5 # x1 = 0 + 5 = 5
+t1: balance = x1     # balance = 5
+t1: x1 = balance - 5 # x1 = 5 - 5 = 0
+t1: balance = x1     # balance = 0
+
+t2: x2 = balance + 8 # x2 = 0 + 8 = 8
+t2: balance = x2     # balance = 8
+t2: x2 = balance - 8 # x2 = 8 - 8 = 0
+t2: balance = x2     # balance = 0
+```
+
+结果 `balance = 0`
+
+但是t1和t2是交替运行的，如果操作系统以下面的顺序执行t1、t2：
+
+初始值 `balance = 0`
+
+```python
+t1: x1 = balance + 5  # x1 = 0 + 5 = 5
+
+t2: x2 = balance + 8  # x2 = 0 + 8 = 8
+t2: balance = x2      # balance = 8
+
+t1: balance = x1      # balance = 5
+t1: x1 = balance - 5  # x1 = 5 - 5 = 0
+t1: balance = x1      # balance = 0
+
+t2: x2 = balance - 8  # x2 = 0 - 8 = -8
+t2: balance = x2   # balance = -8
+```
+
+结果 `balance = -8`，自然就不对了
+
+究其原因，是因为修改 `balance` 需要多条语句，而执行这几条语句时，线程可能中断，其他线程可能也会对 `balance` 进行了修改，从而导致多个线程把同一个对象的内容改乱了。所以，我们必须确保一个线程在修改 `balance` 的时候，别的线程一定不能改。
+
+如果我们要确保 `balance` 计算正确，就要给 `change_it()` 上一把锁，当某个线程开始执行 `change_it()` 时，我们说，该线程获得了锁，因此其他线程不能同时执行 `change_it()`，只能等待锁被释放，线程获得该锁以后才能改。由于锁只有一个，无论多少线程，同一时刻最多只有一个线程持有该锁，所以，不会造成修改的冲突。创建一个锁可以通过 `threading.Lock()` 来实现：
+
+```python
+balance = 0
+lock = threading.Lock()
+
+def run_thread(n):
+    for i in range(100000):
+        # 先要获取锁:
+        lock.acquire()
+        try:
+            # 放心地改吧:
+            change_it(n)
+        finally:
+            # 改完了一定要释放锁:
+            lock.release()
+```
+
+当多个线程同时执行 `lock.acquire()` 时，只有一个线程能成功地获取锁，然后继续执行代码，其他线程就继续等待直到获得锁为止。
+
+**获得锁的线程用完后一定要释放锁**，否则那些苦苦等待锁的线程将永远等待下去，成为死线程。所以我们**用 `try...finally` 来确保锁一定会被释放**。
+
+锁的好处就是确保了某段关键代码只能由一个线程从头到尾完整地执行，坏处当然也很多，首先是阻止了多线程并发执行，包含锁的某段代码实际上只能以单线程模式执行，效率就大大地下降了。其次，由于可以构造多个不同的锁，**不同的线程持有不同的锁，在试图获取对方持有的锁时，可能会造成死锁，导致多个线程全部挂起，既不能执行，也无法结束，只能靠操作系统强制终止**。
+
+---
+
