My_Python_Notebook：ThreadLocal-ThreadLocal的用法

--- a/My_Python_Notebook/10进程和线程.md
+++ b/My_Python_Notebook/10进程和线程.md
@@ -624,4 +624,43 @@ def do_task_2():
 
 ---
 
+### ThreadLocal的用法
 
+有没有更简单的方式？`ThreadLocal` 应运而生，不用查找 `dict`，`ThreadLocal` 可以自动帮我们做这件事：
+
+```python
+import threading
+
+# 创建全局ThreadLocal对象:
+local_school = threading.local()
+
+def process_student():
+    # 获取当前线程关联的student:
+    std = local_school.student
+    print('Hello, %s (in %s)' % (std, threading.current_thread().name))
+
+def process_thread(name):
+    # 绑定ThreadLocal的student:
+    local_school.student = name
+    process_student()
+
+t1 = threading.Thread(target= process_thread, args=('Alice',), name='Thread-A')
+t2 = threading.Thread(target= process_thread, args=('Bob',), name='Thread-B')
+t1.start()
+t2.start()
+t1.join()
+t2.join()
+```
+
+执行结果：
+
+```python
+Hello, Alice (in Thread-A)
+Hello, Bob (in Thread-B)
+```
+
+全局变量 `local_school` 就是一个 `ThreadLocal` 对象，每个线程都可以对它进行读写，线程之间互不影响。你可以把 `local_school` 看成全局变量，但每个属性如 `local_school.student` 都是线程的局部变量，可以任意读写而互不干扰，也不用管理锁的问题，`ThreadLocal` 内部会处理。也可以把 `local_school` 理解为一个全局的 `dict`，不但可以绑定 `local_school.student`，还可以绑定其他变量，如 `local_school.teacher` 等等。
+
+`ThreadLocal` 最常用的地方就是为每个线程绑定一个不同的数据库连接，HTTP请求，用户身份信息等，这样一个线程的所有调用到的处理函数都可以非常方便地访问这些资源。
+
+---
