My_Python_Notebook：ThreadLocal-小结

--- a/My_Python_Notebook/10进程和线程.md
+++ b/My_Python_Notebook/10进程和线程.md
@@ -664,3 +664,13 @@ Hello, Bob (in Thread-B)
 `ThreadLocal` 最常用的地方就是为每个线程绑定一个不同的数据库连接，HTTP请求，用户身份信息等，这样一个线程的所有调用到的处理函数都可以非常方便地访问这些资源。
 
 ---
+
+### 小结
+
+`ThreadLocal` 虽然是全局的，但每个线程都只能读写自己线程的独立副本，互不干扰。`ThreadLocal`解决了参数在一个线程中各个函数之间互相传递的问题。
+
+---
+
+<br>
+
+
