My_Python_Notebook：进程 vs. 线程-比较多进程和多线程

--- a/My_Python_Notebook/10进程和线程.md
+++ b/My_Python_Notebook/10进程和线程.md
@@ -673,4 +673,24 @@ Hello, Bob (in Thread-B)
 
 <br>
 
+## 进程 vs. 线程
+
+### 比较多进程和多线程
+
+我们介绍了多进程和多线程，这是实现多任务最常用的两种方式。现在，我们来讨论一下这两种方式的优缺点。
+
+首先，要实现多任务，通常我们会设计**主从模式（Master-Worker模式）**，Master负责分配任务，Worker负责执行任务，因此，多任务环境下，通常是一个Master，多个Worker。
+
+- 如果用多进程实现Master-Worker，主进程就是Master，其他进程就是Worker。
+- 如果用多线程实现Master-Worker，主线程就是Master，其他线程就是Worker。
+
+多进程模式最大的优点就是**稳定性高**，因为一个子进程崩溃了，不会影响主进程和其他子进程。（当然主进程挂了所有进程就全挂了，但是Master进程只负责分配任务，挂掉的概率低）著名的Apache最早就是采用多进程模式。
+
+多进程模式的缺点是**创建进程的代价大**，在Unix/Linux系统下，用fork调用还行，在Windows下创建进程开销巨大。另外，**操作系统能同时运行的进程数也是有限的**，在内存和CPU的限制下，如果有几千个进程同时运行，操作系统连调度都会成问题。
+
+多线程模式通常比多进程快一点，但是也快不到哪去，而且，多线程模式致命的缺点就是**任何一个线程挂掉都可能直接造成整个进程崩溃**，因为所有线程共享进程的内存。在Windows上，如果一个线程执行的代码出了问题，你经常可以看到这样的提示：“该程序执行了非法操作，即将关闭”，其实往往是某个线程出了问题，但是操作系统会强制结束整个进程。
+
+**在Windows下，多线程的效率比多进程要高**，所以微软的IIS服务器默认采用多线程模式。由于多线程存在稳定性的问题，IIS的稳定性就不如Apache。为了缓解这个问题，IIS和Apache现在又有多进程+多线程的混合模式，真是把问题越搞越复杂。
+
+---
 
