My_Python_Notebook：分布式进程-小结

--- a/My_Python_Notebook/10进程和线程.md
+++ b/My_Python_Notebook/10进程和线程.md
@@ -902,4 +902,12 @@ Result: 7866 * 7866 = 61873956
 
 ---
 
+### 小结
 
+Python的分布式进程接口简单，封装良好，适合需要把繁重任务分布到多台机器的环境下。
+
+注意 `Queue` 的作用是用来传递任务和接收结果，每个任务的描述数据要尽量小。比如发送一个处理日志文件的任务，就不要发送几百兆的日志文件本身，而是发送日志文件存放的完整路径，由Worker进程再去共享的磁盘上读取文件。
+
+---
+
+<br>
