My_Python_Notebook：正则表达式-re模块

--- a/My_Python_Notebook/11正则表达式.md
+++ b/My_Python_Notebook/11正则表达式.md
@@ -58,4 +58,52 @@
 
 <br>
 
+## re模块
+
+有了准备知识，我们就可以在Python中使用正则表达式了。Python提供了 `re` 模块，包含所有正则表达式的功能。注意，在正则表达式中，我们使用 `\` 来表示转义，但在Python的字符串中，`\` 同样是一个转义符。因此，使用时我们就要特别注意字符串中的 `\` 是否能正确地起作用。比方说：
+
+```python
+s = 'ABC\\-001'
+```
+
+这个字符串中，第一个 `\` 用于为第二个 `\` 转义，所以打印这个字符串实际上得到的是 'ABC\-001'，这样用作正则表达式时，就能正确地转义 `-`。而：
+
+```python
+s = 'ABC\-001'
+```
+
+这个字符串实际上是 `'ABC-001'`，由于 `-` 在正则表达式中是一个特殊字符，而这里我们希望的是它只作为用于匹配字符 `-` 的功能，所以这样得到的正则表达式就出错了。
+
+因此在书写正则表达式时，推荐使用Python字符串的 `r` 前缀，这样就不用考虑字符转义的问题了：
+
+```python
+s = r'ABC\-001'
+```
+
+**`r` 前缀表示后面的字符串中无需转义字符。**
+
+接下来看看如何判断正则表达式是否与字符串匹配：
+
+```python
+>>> import re
+>>> re.match(r'^\d{3}\-\d{3,8}$', '010-12345')
+<_sre.SRE_Match object; span=(0, 9), match='010-12345'>
+>>> re.match(r'^\d{3}\-\d{3,8}$', '010 12345')
+>>>
+```
+
+`re` 模块的 `match()` 方法判断是否匹配，如果匹配成功，返回一个 `Match` 对象，否则返回 `None`。常见的判断方法就是：
+
+```python
+test = '用户输入的字符串'
+if re.match(r'正则表达式', test):
+    print('ok')
+else:
+    print('failed')
+```
+
+---
+
+<br>
+
 
