My_Python_Notebook：正则表达式-切分字符串

--- a/My_Python_Notebook/11正则表达式.md
+++ b/My_Python_Notebook/11正则表达式.md
@@ -106,4 +106,39 @@ else:
 
 <br>
 
+## 切分字符串
+
+用正则表达式切分字符串比用固定的字符更灵活，请看正常的切分代码：
+
+```python
+>>> 'a b   c'.split(' ')
+['a', 'b', '', '', 'c']
+```
+
+嗯，无法识别连续的空格，用正则表达式试试：
+
+```python
+>>> re.split(r'\s+', 'a b   c') # '\s+'表示至少匹配一个空白字符
+['a', 'b', 'c']
+```
+
+无论多少个空格都可以正常分割。加入 `,` 试试：
+
+```python
+>>> re.split(r'[\s\,]+', 'a,b, c  d')
+['a', 'b', 'c', 'd']
+```
+
+再加入 `;` 试试：
+
+```python
+>>> re.split(r'[\s\,\;]+', 'a,b;; c  d')
+['a', 'b', 'c', 'd']
+```
+
+如果用户输入了一组标签，下次记得可以用正则表达式来把不规范的输入转化成正确的数组。
+
+---
+
+<br>
 
