My_Python_Notebook：正则表达式-贪婪匹配

--- a/My_Python_Notebook/11正则表达式.md
+++ b/My_Python_Notebook/11正则表达式.md
@@ -183,4 +183,26 @@ else:
 
 <br>
 
+## 贪婪匹配
+
+最后需要特别指出的是，**正则匹配默认是贪婪匹配**，也就是匹配尽可能多的字符。举例如下，匹配出数字后面的0：
+
+```python
+>>> re.match(r'^(\d+)(0*)$', '102300').groups()
+('102300', '')
+```
+
+由于 `\d+` 采用贪婪匹配，直接把后面的0全部匹配了，结果 `0*` 就只能匹配到空字符串了。
+
+必须让 `\d+` 采用非贪婪匹配（也就是尽可能少匹配），才能把后面的0匹配出来，这时我们可以使用 `?` 来让 `\d+` 采用非贪婪匹配：
+
+```python
+>>> re.match(r'^(\d+?)(0*)$', '102300').groups()
+('1023', '00')
+```
+
+---
+
+<br>
+
 
