My_Python_Notebook：正则表达式-习题1

--- a/My_Python_Notebook/11正则表达式.md
+++ b/My_Python_Notebook/11正则表达式.md
@@ -239,4 +239,32 @@ else:
 
 <br>
 
+## 练习
+
+### 习题一
+
+> 请尝试写一个验证Email地址的正则表达式，可以验证类似以下格式的Email：
+
+```python
+someone@gmail.com
+bill.gates@microsoft.com
+```
+
+代码：
+
+```python
+import re
+
+re_email = re.compile(r'^[a-z.]+?@[a-z]+?.com$')
+
+while True:
+    test = input('\nPlease input your email address: ')
+    if re_email.match(test):
+        print('ok')
+    else:
+        print('failed')
+```
+
+---
+
 
