My_Python_Notebook：正则表达式-习题2

--- a/My_Python_Notebook/11正则表达式.md
+++ b/My_Python_Notebook/11正则表达式.md
@@ -267,4 +267,31 @@ while True:
 
 ---
 
+### 习题二
 
+> 继续上一题，但这次的Email地址带名字，要既能验证地址又能提取出名字：
+
+```python
+<Tom Paris> tom@voyager.com
+<Mary Liu> mary@microsoft.com
+```
+
+代码：
+
+```python
+import re
+
+re_email = re.compile(r'^<([A-Za-z\s]+?)\s([A-Za-z\s]+?)>\s([a-z.]+?@[a-z]+?.com)$')
+
+while True:
+    test = input('\nPlease input your email address: ')
+    match = re_email.match(test)
+    if match:
+        print(match.group(1)+' '+match.group(2)+"'s email address is: "+match.group(3))
+    else:
+        print('failed')
+```
+
+---
+
+<br>
