My_Python_Notebook：datetime-datetime转换为timestamp

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -38,3 +38,39 @@ Python之所以自称 **“batteries included”**，就是因为内置了许多
 
 ---
 
+### datetime转换为timestamp
+
+在计算机中，时间实际上是用数字表示的。我们把**1970年1月1日 00:00:00 UTC+00:00时区**的时刻称为**新纪元时间（epoch time）**，记为数字0（1970年以前的时间timestamp为负数），**当前时间就是相对于epoch time的秒数，称为timestamp**。
+
+你可以认为：
+
+```python
+timestamp = 0 # 等价于1970-1-1 00:00:00 UTC+0:00
+```
+
+对应的北京时间是：
+
+```python
+timestamp = 0 # 等价于1970-1-1 08:00:00 UTC+8:00
+```
+
+也即epoch time是北京时间1970年1月1日的早上8点钟。
+
+可见**timestamp的值与时区毫无关系**，无论在哪个时区，同一时刻timestamp的值都相同，实际时间只需要再按时区推算就可以了。这就是为什么计算机存储的当前时间是以timestamp表示的，因为**全球各地的计算机在任意时刻的timestamp都是完全相同的**（假定时间已校准）。
+
+把一个 `datetime` 类型转换为timestamp只需要简单调用 `timestamp()` 方法：
+
+```python
+>>> from datetime import datetime
+>>> dt = datetime(2015, 4, 19, 12, 20) # 用指定日期时间创建datetime
+>>> dt.timestamp() # 把datetime转换为timestamp
+1429417200.0
+```
+
+注意**Python的timestamp是一个浮点数**。如果有小数位，小数位表示**毫秒数**。
+
+某些编程语言（如Java和JavaScript）的timestamp使用整数表示毫秒数，这种情况下只需要把timestamp除以1000就得到Python的浮点表示方法。
+
+---
+
+
