My_Python_Notebook：datetime-datetime转换为str

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -130,3 +130,16 @@ timestamp也可以直接被转换到UTC标准时区的时间：
 
 ---
 
+### datetime转换为str
+
+如果已经有了 `datetime` 对象，要把它格式化为字符串显示给用户，就需要转换为 `str`，转换方法是通过 `strftime()` 实现的：
+
+```python
+>>> from datetime import datetime
+>>> now = datetime.now()
+>>> print(now.strftime('%a, %b %d %H:%M'))
+Mon, May 05 16:28
+```
+
+---
+
