My_Python_Notebook：datetime-datetime加减

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -143,3 +143,33 @@ Mon, May 05 16:28
 
 ---
 
+### datetime加减
+
+对日期和时间进行加减实际上就是把 `datetime` 往后或往前计算，得到新的 `datetime`。加减可以直接用 `+` 和 `-` 运算符，不过需要导入 `timedelta` 这个类：
+
+```python
+>>> from datetime import datetime, timedelta
+>>> now = datetime.now()
+>>> now
+datetime.datetime(2015, 5, 18, 16, 57, 3, 540997)
+>>> now + timedelta(hours=10)
+datetime.datetime(2015, 5, 19, 2, 57, 3, 540997)
+>>> now - timedelta(days=1)
+datetime.datetime(2015, 5, 17, 16, 57, 3, 540997)
+>>> now + timedelta(days=2, hours=12)
+datetime.datetime(2015, 5, 21, 4, 57, 3, 540997)
+```
+
+可见，使用 `timedelta` 你可以很容易地算出前几天和后几天的时刻。
+
+我们也可以使用 `timedelta` 很方便地计算出两个日期之间的差：
+
+```python
+>>> f = datetime(2016,8,19)
+>>> p = datetime(2017,1,16)
+>>> print(p-f)
+150 days, 0:00:00
+```
+
+---
+
