My_Python_Notebook：datetime-小结

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -219,3 +219,11 @@ datetime.datetime(2015, 5, 18, 17, 2, 10, 871012, tzinfo=datetime.timezone(datet
 
 注意，上述代码中首先通过 `utcnow()` 方法获取到一个处于UTC时间的 `datetime` 实例（按照系统时间推算出的，所以如果系统时间错则得到的实例也是错的），这个实例本身没有时区信息，所以要通过 `replace()` 方法强制设置时区信息为UTC时区。然后利用这个带时区的 `datetime`，通过 `astimezone()` 方法就可以转换到任意时区了。注意，任何带时区（不必是UTC时区）的 `datetime` 都可以被正确转换到别的时区，例如上述 `bj_dt` 到 `tokyo_dt` 的转换。
 
+### 小结
+
+`datetime` 表示的时间需要时区信息才能确定一个特定的时间，否则只能视为本地时间。
+
+如果要存储 `datetime`，最佳方法是将其转换为 `timestamp` 再存储，因为 `timestamp` 的值与时区完全无关。
+
+---
+
