My_Python_Notebook：datetime-练习

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -227,3 +227,36 @@ datetime.datetime(2015, 5, 18, 17, 2, 10, 871012, tzinfo=datetime.timezone(datet
 
 ---
 
+### 练习
+
+> 假设你获取了用户输入的日期和时间如 `2015-1-21 9:01:30`，以及一个时区信息如 `UTC+5:00`，均是 `str`，请编写一个函数将其转换为 `timestamp`：
+
+代码：
+
+```python
+# -*- coding:utf-8 -*-
+
+import re
+from datetime import datetime, timezone, timedelta
+
+def to_timestamp(dt_str, tz_str):
+
+    tz_match = re.match(r'UTC([\+\-]\d+?):00', tz_str)
+    idate = datetime.strptime(dt_str, '%Y-%m-%d %H:%M:%S')
+    idate = idate.replace(tzinfo=timezone(timedelta(hours=int(tz_match.group(1)))))
+    return idate.timestamp()
+
+# 测试:
+
+t1 = to_timestamp('2015-6-1 08:10:30', 'UTC+7:00')
+if t1 == 1433121030.0:
+    print('Pass.')
+else:
+    print('Fail.')
+
+t2 = to_timestamp('2015-5-31 16:10:30', 'UTC-09:00')
+if t2 == 1433121030.0:
+    print('Pass.')
+else:
+    print('Fail.')
+```
