My_Python_Notebook：collections-namedtuple

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -261,7 +261,52 @@ else:
     print('Fail.')
 ```
 
+---
+
+<br>
+
 ## collections
 
 `collections` 是Python内建的一个集合模块，提供了许多有用的集合类。
+
+### namedtuple
+
+我们知道 `tuple` 可以表示不变集合，例如，一个点的二维坐标就可以表示成：
+
+```python
+>>> p = (1, 2)
+```
+
+但是，代码中使用 `(1, 2)` 的方式来写很难看出这个 `tuple` 是用来表示一个点的。如果我们特地为定义一个“点”类而编写代码，又有点小题大作。怎么办呢？`collections` 模块中的 `namedtuple` 可以帮到我们：
+
+```python
+>>> from collections import namedtuple
+>>> Point = namedtuple('Point', ['x', 'y'])
+>>> p = Point(1, 2)
+>>> p.x
+1
+>>> p.y
+2
+```
+
+`namedtuple()` 是一个函数，它可以用来方便地创建一个按需定制的 `tuple` 类的子类，我们可以把这样得到的子类看作一种特殊的元组，可以采用访问属性的方式来引用该元组的元素，使用十分方便。
+
+可以验证创建的 `Point` 是 `tuple` 的一种子类：
+
+```python
+>>> isinstance(p, Point)
+True
+>>> isinstance(p, tuple)
+True
+```
+
+类似的，如果要用坐标和半径表示一个圆，也可以用 `namedtuple` 来创建一个 `Circle` 类：
+
+```python
+# namedtuple('名称', [属性list]):
+Circle = namedtuple('Circle', ['x', 'y', 'r'])
+```
+
+---
+
 
