My_Python_Notebook：collections-deque

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -309,4 +309,20 @@ Circle = namedtuple('Circle', ['x', 'y', 'r'])
 
 ---
 
+### deque
+
+使用 `list` 存储数据时，按索引访问元素很快，但是插入和删除元素就很慢了，因为 `list` 是线性存储，数据量大的时候，插入和删除效率很低。`deque` 是为了更高效实现插入和删除操作而创造的双向列表，适合用于队列和栈：
+
+```python
+>>> from collections import deque
+>>> q = deque(['a', 'b', 'c'])
+>>> q.append('x')
+>>> q.appendleft('y')
+>>> q
+deque(['y', 'a', 'b', 'c', 'x'])
+```
+
+`deque` 除了实现 `list` 的 `append()` 和 `pop()` 外，还支持 `appendleft()` 和 `popleft()`，这样就可以非常高效地往头部添加或删除元素。
+
+---
 
