My_Python_Notebook：collections-defaultdict

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -326,3 +326,22 @@ deque(['y', 'a', 'b', 'c', 'x'])
 
 ---
 
+### defaultdict
+
+使用 `dict` 时，如果引用的Key不存在，就会抛出 `KeyError`。如果希望key不存在时也能返回一个默认值，可以使用 `defaultdict`：
+
+```python
+>>> from collections import defaultdict
+>>> dd = defaultdict(lambda: 'N/A')
+>>> dd['key1'] = 'abc'
+>>> dd['key1'] # key1存在
+'abc'
+>>> dd['key2'] # key2不存在，返回默认值
+'N/A'
+```
+
+注意**默认值是调用函数返回的**，而函数在创建 `defaultdict` 对象时传入。除了在Key不存在时返回默认值，`defaultdict` 的其他行为跟 `dict` 是完全一样的。
+
+---
+
+
