My_Python_Notebook：collections-OrderedDict

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -344,4 +344,60 @@ deque(['y', 'a', 'b', 'c', 'x'])
 
 ---
 
+### OrderedDict
+
+使用 `dict` 时，Key是无序的。在对 `dict` 做迭代时，我们无法确定Key的顺序。
+
+如果要保持Key的顺序，可以用 `OrderedDict`：
+
+```python
+>>> from collections import OrderedDict
+>>> d = dict([('a', 1), ('b', 2), ('c', 3)])
+>>> d # dict的Key是无序的
+{'a': 1, 'c': 3, 'b': 2}
+>>> od = OrderedDict([('a', 1), ('b', 2), ('c', 3)])
+>>> od # OrderedDict的Key是有序的
+OrderedDict([('a', 1), ('b', 2), ('c', 3)])
+```
+
+注意，**`OrderedDict` 的Key是按照插入的顺序排列的，不是Key本身排序**：
+
+```python
+>>> od = OrderedDict()
+>>> od['z'] = 1
+>>> od['y'] = 2
+>>> od['x'] = 3
+>>> list(od.keys()) # 按照插入的Key的顺序返回
+['z', 'y', 'x']
+```
+
+`OrderedDict` 可以实现一个FIFO（先进先出）的 `dict`，当容量超出限制时，优先删除最早添加的Key：
+
+```python
+from collections import OrderedDict
+
+class LastUpdatedOrderedDict(OrderedDict):
+
+    def __init__(self, capacity):
+        super(LastUpdatedOrderedDict, self).__init__()
+        self._capacity = capacity
+
+    def __setitem__(self, key, value):
+        containsKey = 1 if key in self else 0
+        if len(self) - containsKey >= self._capacity:
+            last = self.popitem(last=False)
+            print('remove:', last)
+        if containsKey:
+            del self[key]
+            print('set:', (key, value))
+        else:
+            print('add:', (key, value))
+        OrderedDict.__setitem__(self, key, value)
+```
+
+解析一下上面的例子，我们实现了一个容量有限的先进先出的 `dict` —— `LastUpdatedOrderedDict`，在实例化时，`__init__()` 方法会被调用来初始化要创建的实例。`self` 参数指的便是要创建的实例本身，此外我们传入一个 `capacity` 参数用来表示这个 `dict` 的容量。需要注意，在这个 `__init__()` 方法中，我们使用 `super(LastUpdatedOrderedDict, self).__init__()` 这个语句来进行初始化，它会自动找到 `LastUpdatedOrderedDict` 的父类，把实例 `self` 转换为一个特殊的父类对象，从而可以调用父类的 `__init__()` 方法。`self._capacity = capacity` 这一句则是给实例绑定容量属性，使用 `_capacity` 这个变量名来和传入参数区别开来，前置单下划线表示这个属性应被视作私有属性来使用。
+
+再看看 `__setitem__()` 方法，首先判断一下设置的key在 `dict` 里是否存在，如果存在则 `containsKey` 为1否则为0。接下来判断容量是否超出，如果超出则pop掉最前面的一个key-value对。然后再判断key是否存在，是则先删除掉原来的key-value对。最后调用父类的 `__setitem__()` 方法来完成赋值。
+
+---
 
