My_Python_Notebook：collections-小结

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -419,4 +419,10 @@ Counter({'g': 2, 'm': 2, 'r': 2, 'a': 1, 'i': 1, 'o': 1, 'n': 1, 'p': 1})
 
 ---
 
+### 小结
 
+`collections` 模块提供了一些有用的集合类，我们可以根据需要选用。
+
+---
+
+<br>
