My_Python_Notebook：struct-为何需要struct

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -525,3 +525,34 @@ assert b'abcd' == safe_base64_decode(b'YWJjZA=='), safe_base64_decode('YWJjZA=='
 assert b'abcd' == safe_base64_decode(b'YWJjZA'), safe_base64_decode('YWJjZA')
 print('Pass')
 ```
+
+---
+
+<br>
+
+## struct
+
+### 为何需要struct
+
+准确地讲，**Python没有专门处理字节的数据类型**。但由于 `b'str'` 可以用来表示字节，所以在Python中可以认为 `字节数组＝二进制str`。而在C语言中，我们可以很方便地用 `struct`、`union` 等库来处理字节以及字节和int，float的转换。
+
+假设我们要把一个32位无符号整数转换为字节（4个bytes）。在Python中，得这么写：
+
+```python
+>>> n = 10240099
+>>> b1 = (n & 0xff000000) >> 24
+>>> b2 = (n & 0xff0000) >> 16
+>>> b3 = (n & 0xff00) >> 8
+>>> b4 = n & 0xff
+>>> bs = bytes([b1, b2, b3, b4])
+>>> bs
+b'\x00\x9c@c'
+```
+
+稍微解析一下，十进制数 `10240099` 转换为十六进制是 `0x009c4063`，这里使用与运算和右移来拆分出这个32位无符号整数的每一个byte（注意得到的不是字节数组而是一个整数），其中 `b1=0, b2=156, b3=64, b4=99`，将这四个整数放入一个列表中传入 `bytes()` 函数，就能得到字节数组了。注意 `bs` 中是有4个字节的，`len(bs)` 的值为4。由于对应整数64的十六进制数 `0x40` 属于ASCII码范围，所以用字符 `@` 表示，而对应整数99的十六进制数 `0x63` 则对应字符 `c`。
+
+可以看到，这样要逐个byte来拆分，再进行转换实在是非常麻烦。如果要把浮点数转换为字节就无能为力了。幸好，Python提供了一个 `struct` 模块来解决 `bytes` 和其他二进制数据类型的转换问题。
+
+---
+
+
