My_Python_Notebook：struct-struct的用法

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -555,4 +555,34 @@ b'\x00\x9c@c'
 
 ---
 
+### struct的用法
+
+`struct` 模块的 `pack` 函数把任意数据类型变成 `bytes`：
+
+```python
+>>> import struct
+>>> struct.pack('>I', 10240099)
+b'\x00\x9c@c'
+```
+
+`pack()` 的第一个参数是**处理指令**，这里 `'>I'` 的意思分为两部分：
+
+- 字节顺序：`>` 表示的是使用大端序作为字节顺序。
+- 数据类型：`I` 表示的是要转换一个32位无符号整数。可以有多个数据类型从而转换出多个数。
+
+第二个参数要注意和处理指令一致。
+
+`unpack()` 函数与 `pack()` 相反，它是把 `bytes` 转换为相应的数据类型：
+
+```python
+>>> struct.unpack('>IH', b'\xf0\xf0\xf0\xf0\x80\x80')
+(4042322160, 32896)
+```
+
+这里的 `>IH` 表示这个字节数组用的是大端序，并且要依次转换出一个32位无符号整数和16位无符号整数。
+
+`struct` 模块定义的数据类型可以参考[Python官方文档](https://docs.python.org/3/library/struct.html#format-characters)。关于大端序（big-endian，BE）和小端序（little-endian，LE）的区别可以看看[这篇博文](http://www.cnblogs.com/passingcloudss/archive/2011/05/03/2035273.html)，讲解得很清晰。
+
+---
+
 
