My_Python_Notebook：struct-使用struct分析bmp文件

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -585,4 +585,36 @@ b'\x00\x9c@c'
 
 ---
 
+### 使用struct分析bmp文件
+
+Windows的位图文件（.bmp）是一种非常简单的文件格式，我们可以使用 `struct` 来分析一下。
+
+首先找到一个bmp文件，没有的话用“画图”画一个。读入它的前30个字节来分析：
+
+```python
+>>> s = b'\x42\x4d\x38\x8c\x0a\x00\x00\x00\x00\x00\x36\x00\x00\x00\x28\x00\x00\x00\x80\x02\x00\x00\x68\x01\x00\x00\x01\x00\x18\x00'
+```
+
+BMP格式采用小端序的方式存储数据，文件头的结构按顺序如下：
+
+- 两个字节：'BM'表示Windows位图，'BA'表示OS/2位图；
+- 一个32位无符号整数：表示位图大小；
+- 一个32位无符号整数：保留位，始终为0；
+- 一个32位无符号整数：实际图像的偏移量；
+- 一个32位无符号整数：Header的字节数；
+- 一个32位无符号整数：图像宽度(单位为像素)；
+- 一个32位无符号整数：图像高度(单位为像素)；
+- 一个16位无符号整数：始终为1；
+- 一个16位无符号整数：颜色数。
+
+所以，组合起来用unpack读取：
+
+```python
+>>> struct.unpack('<ccIIIIIIHH', s)
+(b'B', b'M', 691256, 0, 54, 40, 640, 360, 1, 24)
+```
+
+这里的 `c` 表示对应的数据类型是一个字符。结果显示，`b'B'`、`b'M'` 说明是一张Windows位图，位图大小为640x360，颜色数为24。
+
+---
 
