My_Python_Notebook：hashlib-摘要算法简介

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -589,7 +589,7 @@ b'\x00\x9c@c'
 
 Windows的位图文件（.bmp）是一种非常简单的文件格式，我们可以使用 `struct` 来分析一下。
 
-首先找到一个bmp文件，没有的话用“画图”画一个。读入它的前30个字节来分析：
+首先找到一个bmp文件，没有的话用Windows自带的【画图】画一个即可。读入它的前30个字节来分析：
 
 ```python
 >>> s = b'\x42\x4d\x38\x8c\x0a\x00\x00\x00\x00\x00\x36\x00\x00\x00\x28\x00\x00\x00\x80\x02\x00\x00\x68\x01\x00\x00\x01\x00\x18\x00'
@@ -665,3 +665,16 @@ if __name__=='__main__':
 ---
 
 <br>
+
+## hashlib
+
+### 摘要算法简介
+
+Python的 `hashlib` 模块提供了常见的摘要算法，如MD5，SHA1等等。
+
+什么是摘要算法呢？摘要算法又称哈希算法、散列算法。它通过一个摘要函数（也称哈希函数），**把任意长度的数据转换为一个固定长度的数据串**（称为**摘要（digest）**，通常表示为由16进制数字组成的字符串）。
+
+摘要函数应当是一个单向函数，也即计算摘要容易，但通过摘要反推原始数据却非常困难。并且即使仅对原始数据做一个bit的修改也会导致计算出的摘要完全不同。
+
+---
+
