My_Python_Notebook：hashlib-加盐

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -812,3 +812,25 @@ if __name__=='__main__':
 
 ---
 
+### 加盐
+
+对于用户来讲，当然不应该使用过于简单的口令。但是，我们能否**在程序设计上对简单口令加强保护**呢？
+
+由于常用口令的MD5值很容易被计算出来，为了加强保护，我们可以对原始口令添加一个复杂字符串（俗称“盐”），这样再计算MD5值就不容易被黑客蒙中了，这种方法俗称**“加盐”**：
+
+```python
+def calc_md5(password):
+
+    md5 = hashlib.md5()
+    md5.update(password.encode('utf-8'))
+    md5.update('the-Salt'.encode('utf-8'))
+    return md5.hexdigest()
+```
+
+经过加盐处理的MD5口令，只要盐不被黑客知道，即使用户使用简单口令，也很难通过MD5被反推出来。
+
+但是如果有两个用户都使用了相同的简单口令比如123456，数据库中就会存储两条相同的MD5值，这说明这两个用户的口令是一样的。有没有办法**让使用相同口令的用户存储不同的MD5**呢？如果假定用户无法修改登录名，就可以通过把登录名作为“盐”的一部分来计算MD5，从而实现相同口令的用户有不同的MD5值。
+
+---
+
+
