My_Python_Notebook：hashlib-练习二

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -833,4 +833,36 @@ def calc_md5(password):
 
 ---
 
+### 练习二
+
+> 根据用户输入的登录名和口令模拟用户注册，计算更安全的MD5：
+
+```python
+db = {}
+
+def register(username, password):
+    db[username] = calc_md5(password + username + 'the-Salt')
+
+def calc_md5(password):
+
+    md5 = hashlib.md5()
+    md5.update(password.encode('utf-8'))
+    return md5.hexdigest()
+
+```
+
+> 根据修改后的MD5算法实现用户登录的验证：
+
+```python
+def login(user, password):
+
+    digest = calc_md5(password + username + 'the-Salt')
+    if db[user] == digest:
+        return True
+    else:
+        return False
+```
+
+---
+
 
