My_Python_Notebook：hashlib-小结

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -865,4 +865,10 @@ def login(user, password):
 
 ---
 
+### 小结
 
+摘要算法在很多地方都有广泛的应用。要注意**摘要算法不是加密算法，不能用于加密**（因为无法通过摘要反推明文），只能用于防篡改，但是它的单向计算特性决定了可以在不存储明文口令的情况下验证用户口令。
+
+---
+
+<br>
