My_Python_Notebook：itertools-简介

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -872,3 +872,13 @@ def login(user, password):
 ---
 
 <br>
+
+## itertools
+
+### 简介
+
+Python的内建模块 `itertools` 提供了非常有用的用于操作迭代对象的函数。我们首先看看 `itertools` 提供的几个“无限”迭代器：
+
+---
+
+#
