My_Python_Notebook：itertools-takewhile

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -940,3 +940,20 @@ A
 
 ---
 
+### takewhile
+
+前面介绍了几种产生“无限”迭代器的方法，有没有办法对它们进行控制呢？有的~我们可以通过 `takewhile()`等函数，根据条件判断来截取出有限的序列：
+
+```python
+>>> natuals = itertools.count(1)
+>>> ns = itertools.takewhile(lambda x: x <= 10, natuals)
+>>> list(ns)
+[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+```
+
+这里我们只截取序列中小于等于10的数，所以迭代器产生的数不符合该条件时就会停止迭代，也就不会无限地排列下去了。
+
+除了 `takewhile()` 之外，`itertools` 还提供了一些非常有用的迭代器操作函数，在后面几个小节中会进行介绍。
+
+---
+
