My_Python_Notebook：itertools-chain

--- a/My_Python_Notebook/12常用内建模块.md
+++ b/My_Python_Notebook/12常用内建模块.md
@@ -957,3 +957,21 @@ A
 
 ---
 
+### chain
+
+`chain()` 可以把一组迭代对象串联起来，形成一个更大的迭代器：
+
+```python
+>>> for c in itertools.chain('ABC', 'XYZ'):
+...     print(c)
+...
+A
+B
+C
+X
+Y
+Z
+```
+
+---
+
